--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 								<div class="row">
 									<div class="col-sm-6 col-md-5">
 									  <div class="about-img">
-										<img src="Yashraj_Photo.jpg" class="img-fluid rounded b-shadow-a" alt="">
+										<img src="profile_photo.png" class="img-fluid rounded b-shadow-a" alt="">
 									  </div>
 									</div>
 									<!-- Details next to profile image -->
