--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Projects</h1>
             <h2 class="mb-4">Projects</h2>
-            <p>Below are the sample Data Analytics projects on SQL, Python, Power BI & ML.</p>
+            <p>Below are some of my Projects</p>
           </div>
         </div>
         
@@ -493,7 +493,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="#">Resumelink</a></p>
+	            <p><a href="https://drive.google.com/file/d/1TAjjZhFZMrTSIptgt8HdHjDzTNTaW8gy/view?usp=sharing">Click Here</a></p>
 	          </div>
           </div>
 
