--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 					<div class="resume-wrap ftco-animate">
 						<span class="date">2023-Present</span>
 						<h2>Software Development Intern</h2>
-						<span class="position">Xcaliber Infotech Private Limited : A Phoenix Group Comapany
+						<span class="position">Xcaliber Infotech Private Limited : A Phoenix Group Company
 	
 						</span>
 						<p class="mt-4">Xcaliber Infotech Private Limited, a leading IT Services Organisation with over 10+ professionals globally. It's a part of Phoenix Group. 
